Updated rtbbidder module. Its in working condition but without ltm and ipprops

--- a/rtbbidder/.fixtures.yml
+++ b/rtbbidder/.fixtures.yml
@@ -7,3 +7,18 @@ fixtures:
     rtbbidder/files: '../../../../files'
     rtbbidder/manifests: '../../../../manifests'
     rtbbidder/templates: '../../../../templates'
+    repo/files: '../../../../../repo/files'
+    repo/manifests: '../../../../../repo/manifests'
+    repo/templates: '../../../../../repo/templates'
+    jdk/files: '../../../../../jdk/files'
+    jdk/manifests: '../../../../../jdk/manifests'
+    jdk/templates: '../../../../../jdk/templates'
+    tomcat/files: '../../../../../tomcat/files'
+    tomcat/manifests: '../../../../../tomcat/manifests'
+    tomcat/templates: '../../../../../tomcat/templates'    
+    bidder/files: '../../../../../bidder/files'
+    bidder/manifests: '../../../../../bidder/manifests'
+    bidder/templates: '../../../../../bidder/templates'
+    scribe/files: '../../../../../scribe/files'
+    scribe/manifests: '../../../../../scribe/manifests'
+    scribe/templates: '../../../../../scribe/templates'
